// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode acp --help 1`] = `
"lmplayer acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: opencode.local)
                                                                [string] [default: "opencode.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp --help 1`] = `
"lmplayer mcp

manage MCP (Model Context Protocol) servers

Commands:
  lmplayer mcp add [name]      add an MCP server
  lmplayer mcp list            list MCP servers and their status                       [aliases: ls]
  lmplayer mcp show <name>     show MCP server details                                [aliases: get]
  lmplayer mcp auth [name]     authenticate with an OAuth-enabled MCP server
  lmplayer mcp logout [name]   remove OAuth credentials for an MCP server
  lmplayer mcp debug <name>    debug OAuth connection for an MCP server
  lmplayer mcp enable <name>   enable a configured MCP server
  lmplayer mcp disable <name>  disable a configured MCP server
  lmplayer mcp remove <name>   remove a configured MCP server                          [aliases: rm]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode tui --help 1`] = `
"lmplayer tui [project]

start lmplayer tui

Positionals:
  project  path to start lmplayer in                                                        [string]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --port          port to listen on                                        [number] [default: 0]
      --hostname      hostname to listen on                          [string] [default: "127.0.0.1"]
      --mdns          enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain   custom domain name for mDNS service (default: opencode.local)
                                                                [string] [default: "opencode.local"]
      --cors          additional domains to allow for CORS                     [array] [default: []]
  -m, --model         model to use in the format of provider/model                          [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
      --prompt        prompt to use                                                         [string]
      --agent         agent to use                                                          [string]
      --auto          auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode attach --help 1`] = `
"lmplayer attach <url>

attach to a running lmplayer server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to OPENCODE_SERVER_PASSWORD)            [string]
  -u, --username      basic auth username (defaults to OPENCODE_SERVER_USERNAME or 'opencode')
                                                                                            [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode run --help 1`] = `
"lmplayer run [message..]

run lmplayer with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help               show help                                                       [boolean]
  -v, --version            show version number                                             [boolean]
      --print-logs         print logs to stderr                                            [boolean]
      --log-level          log level            [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure               run without external plugins                                    [boolean]
      --command            the command to run, use message for args                         [string]
  -c, --continue           continue the last session                                       [boolean]
  -s, --session            session id to continue                                           [string]
      --fork               fork the session before continuing (requires --continue or --session)
                                                                                           [boolean]
      --share              share the session                                               [boolean]
  -m, --model              model to use in the format of provider/model                     [string]
      --agent              agent to use                                                     [string]
      --format             format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file               file(s) to attach to message                                      [array]
      --title              title for the session (uses truncated prompt if no value provided)
                                                                                            [string]
      --attach             attach to a running lmplayer server (e.g., http://localhost:4096)[string]
  -p, --password           basic auth password (defaults to OPENCODE_SERVER_PASSWORD)       [string]
  -u, --username           basic auth username (defaults to OPENCODE_SERVER_USERNAME or 'opencode')
                                                                                            [string]
      --dir                directory to run in, path on remote server if attaching          [string]
      --port               port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant, --effort  reasoning effort / model variant (e.g. low, medium, high, xhigh, max —
                           see \`models --json\` variants per model)                          [string]
      --thinking           show thinking blocks                                            [boolean]
  -i, --interactive        run in direct interactive split-footer mode    [boolean] [default: false]
      --auto               auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode debug --help 1`] = `
"lmplayer debug

debugging and troubleshooting tools

Commands:
  lmplayer debug config        show resolved configuration
  lmplayer debug lsp           LSP debugging utilities
  lmplayer debug rg            ripgrep debugging utilities
  lmplayer debug file          file system debugging utilities
  lmplayer debug scrap         list all known projects
  lmplayer debug skill         list all available skills
  lmplayer debug snapshot      snapshot debugging utilities
  lmplayer debug startup       print startup timing
  lmplayer debug agent <name>  show agent configuration details
  lmplayer debug v2            debug v2 catalog and built-in plugins
  lmplayer debug info          show debug information
  lmplayer debug paths         show global paths (data, config, cache, state)
  lmplayer debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers --help 1`] = `
"lmplayer providers

manage AI providers and credentials

Commands:
  lmplayer providers list                list providers and credentials                [aliases: ls]
  lmplayer providers show <provider>     show detailed information for an AI provider [aliases: get]
  lmplayer providers login [url]         log in to a provider
  lmplayer providers logout [provider]   log out from a configured provider
  lmplayer providers enable <provider>   enable an AI provider
  lmplayer providers disable <provider>  disable an AI provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent --help 1`] = `
"lmplayer agent

manage agents

Commands:
  lmplayer agent create                   create a new agent
  lmplayer agent clone <source> <target>  clone an existing agent into a new custom agent
                                                                                 [aliases: copy, cp]
  lmplayer agent list                     list all available agents                    [aliases: ls]
  lmplayer agent show <name>              show agent details                          [aliases: get]
  lmplayer agent delete <name>            delete a custom agent                        [aliases: rm]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode upgrade --help 1`] = `
"lmplayer upgrade [target]

upgrade lmplayer to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode uninstall --help 1`] = `
"lmplayer uninstall

uninstall lmplayer and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode serve --help 1`] = `
"lmplayer serve

starts a headless lmplayer server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: opencode.local)
                                                                [string] [default: "opencode.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode web --help 1`] = `
"lmplayer web

start lmplayer server and open web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: opencode.local)
                                                                [string] [default: "opencode.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode models --help 1`] = `
"lmplayer models [provider]

list all available models

Commands:
  lmplayer models list [provider]  list available models                               [aliases: ls]
  lmplayer models verify <model>   verify a model is known and available; exit non-zero with a
                                   reason if not
  lmplayer models test [provider]  probe each model with a tiny prompt and report which actually
                                   work end-to-end
  lmplayer models show <model>     show detailed information for a specific model     [aliases: get]

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help                       show help                                               [boolean]
  -v, --version                    show version number                                     [boolean]
      --print-logs                 print logs to stderr                                    [boolean]
      --log-level                  log level    [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                       run without external plugins                            [boolean]
  -q, --search, --query            filter models by query matching ID, name, or provider    [string]
  -r, --reasoning                  filter models supporting reasoning effort / thinking    [boolean]
      --toolcall, --tools          filter models supporting tool calling                   [boolean]
      --attachment, --attachments  filter models supporting image and file attachments     [boolean]
      --min-context                filter models with context window at least this many tokens
                                                                                            [number]
  -o, --output                     write models list to output file path                    [string]
      --verbose                    use more verbose model output (includes metadata like costs)
                                                                                           [boolean]
      --json                       output models as a JSON array (id, limits, capabilities,
                                   reasoning-effort variants)                              [boolean]
      --refresh                    refresh the models cache from models.dev                [boolean]
      --test                       probe each model with a tiny prompt and report which actually
                                   work end-to-end                                         [boolean]
      --timeout                    per-model timeout in milliseconds when using --test
                                                                           [number] [default: 60000]
      --concurrency                number of models to probe in parallel when using --test (default
                                   1, sequential)                              [number] [default: 1]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode stats --help 1`] = `
"lmplayer stats

show token usage and cost statistics

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --days          show stats for the last N days (default: all time)                    [number]
      --tools         number of tools to show (default: all)                                [number]
      --models        show model statistics (default: hidden). Pass a number to show top N,
                      otherwise shows all
      --project       filter by project (default: all projects, empty string: current project)
                                                                                            [string]
      --provider      filter by provider ID (e.g. ollama-cloud, deepseek)                   [string]
      --model         filter by model ID or provider/model (e.g. deepseek-v4.1-flash,
                      kimi-k2.7-code)                                                       [string]
      --budget        budget limit in USD to compare spend against (e.g. 10.00)             [number]
      --budget-check  exit with code 2 if total spend exceeds budget limit                 [boolean]
  -o, --output        write statistics to output file path                                  [string]
      --json          output as JSON                                                       [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode export --help 1`] = `
"lmplayer export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help            show help                                                          [boolean]
  -v, --version         show version number                                                [boolean]
      --print-logs      print logs to stderr                                               [boolean]
      --log-level       log level               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure            run without external plugins                                       [boolean]
  -o, --output, --file  write export JSON to file path                                      [string]
      --sanitize        redact sensitive transcript and file data                          [boolean]
      --json            output summary as JSON when exporting to file                      [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode import --help 1`] = `
"lmplayer import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --title       override title of imported session                                      [string]
  -o, --output      write import result to output file path                                 [string]
      --json        output as JSON                                                         [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github --help 1`] = `
"lmplayer github

manage GitHub agent

Commands:
  lmplayer github install  install the GitHub agent
  lmplayer github run      run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode pr --help 1`] = `
"lmplayer pr <number>

fetch and checkout a GitHub PR branch, then run lmplayer

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session --help 1`] = `
"lmplayer session

manage sessions

Commands:
  lmplayer session ls                                 list sessions
  lmplayer session show <sessionID>                   show detailed session information
                                                                                      [aliases: get]
  lmplayer session status [sessionID]                 show runtime status of sessions
  lmplayer session tail <sessionID>                   print recent session messages
  lmplayer session report <sessionID>                 report session metrics
  lmplayer session metrics <sessionID>                report machine-queryable session metrics
                                                      (tokens, cost, latency, tools, files)
  lmplayer session health <sessionID>                 report session context health
  lmplayer session list                               list sessions
  lmplayer session delete <sessionID>                 delete one or more sessions
  [extraSessionIDs..]                                                                  [aliases: rm]
  lmplayer session rename <sessionID> <title>         rename a session
  lmplayer session fork <sessionID>                   fork a session
  lmplayer session share <sessionID>                  share a session (create a public share link)
  lmplayer session unshare <sessionID>                unshare a session (revoke public share link)
  lmplayer session compact <sessionID>                compact/summarize a session
                                                                                [aliases: summarize]
  lmplayer session jobs <sessionID>                   inspect background jobs for a session
  lmplayer session crons <sessionID>                  inspect scheduled cron jobs for a session
  lmplayer session todo <sessionID>                   list todo tasks for a session
  lmplayer session diff <sessionID>                   show file diffs for a session
  lmplayer session export [sessionID]                 export session data as JSON
  lmplayer session import <file>                      import session data from JSON file or URL
  lmplayer session memory <sessionID>                 view or update durable memory for a session
                                                                                    [aliases: brain]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode plugin --help 1`] = `
"lmplayer plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]
      --json        output JSON                                                            [boolean]
  -o, --output      write plugin install result to output file path                         [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db --help 1`] = `
"lmplayer db

database tools

Commands:
  lmplayer db [query]     open an interactive sqlite3 shell or run a query                 [default]
  lmplayer db path        print the database path
  lmplayer db info        show database size, row counts, and storage metrics
                                                                            [aliases: stats, status]
  lmplayer db check       verify database integrity and foreign key constraints
                                                                        [aliases: verify, integrity]
  lmplayer db vacuum      reclaim disk space, checkpoint WAL, and optimize[aliases: optimize, clean]

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp list --help 1`] = `
"lmplayer mcp list

list MCP servers and their status

Options:
  -h, --help             show help                                                         [boolean]
  -v, --version          show version number                                               [boolean]
      --print-logs       print logs to stderr                                              [boolean]
      --log-level        log level              [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure             run without external plugins                                      [boolean]
      --json             output JSON                                                       [boolean]
  -o, --output           write MCP servers list to output file path                         [string]
  -q, --search, --query  filter servers by name, type, or command/URL                       [string]
  -t, --type             filter servers by type                [string] [choices: "local", "remote"]
      --enabled          filter servers by enabled status                                  [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp show --help 1`] = `
"lmplayer mcp show <name>

show MCP server details

Positionals:
  name  name of the MCP server                                                   [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --json        output JSON                                                            [boolean]
  -o, --output      write MCP server details to output file path                            [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp add --help 1`] = `
"lmplayer mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]
      --scope       configuration target scope (project or global)
                                                             [string] [choices: "project", "global"]
  -g, --global      add to global config (equivalent to --scope global)                    [boolean]
  -p, --project     add to project config (equivalent to --scope project)                  [boolean]
      --json        output JSON                                                            [boolean]
  -o, --output      write MCP server add result to output file path                         [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp auth --help 1`] = `
"lmplayer mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  lmplayer mcp auth list  list OAuth-capable MCP servers and their auth status         [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode mcp logout --help 1`] = `
"lmplayer mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -f, --force       do not exit non-zero if credentials or server not found                [boolean]
      --json        output JSON result                                                     [boolean]
  -o, --output      write logout result to output file path                                 [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers list --help 1`] = `
"lmplayer providers list

list providers and credentials

Options:
  -h, --help             show help                                                         [boolean]
  -v, --version          show version number                                               [boolean]
      --print-logs       print logs to stderr                                              [boolean]
      --log-level        log level              [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure             run without external plugins                                      [boolean]
      --json             output as JSON (machine-readable; suppresses human output)        [boolean]
  -o, --output           write providers list to output file path                           [string]
  -q, --search, --query  filter providers by ID or name substring                           [string]
  -a, --all              list all known providers in catalog, not only authenticated ones  [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers login --help 1`] = `
"lmplayer providers login [url]

log in to a provider

Positionals:
  url  auth provider URL or ID                                                              [string]

Options:
  -h, --help            show help                                                          [boolean]
  -v, --version         show version number                                                [boolean]
      --print-logs      print logs to stderr                                               [boolean]
      --log-level       log level               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure            run without external plugins                                       [boolean]
  -p, --provider        provider id or name to log in to (skips provider selection)         [string]
  -m, --method          login method label (skips method selection)                         [string]
  -k, --key, --api-key  API key (non-interactive; use '-' to read from stdin)               [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode providers logout --help 1`] = `
"lmplayer providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -f, --force       do not exit non-zero if provider credential is not found               [boolean]
      --json        output JSON result                                                     [boolean]
  -o, --output      write logout result to output file path                                 [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent create --help 1`] = `
"lmplayer agent create

create a new agent

Options:
  -h, --help                        show help                                              [boolean]
  -v, --version                     show version number                                    [boolean]
      --print-logs                  print logs to stderr                                   [boolean]
      --log-level                   log level   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                        run without external plugins                           [boolean]
      --name                        agent identifier / file name                            [string]
      --prompt                      system prompt content (bypasses LLM generation)         [string]
      --prompt-file, --prompt_file  path to file containing system prompt content (bypasses LLM
                                    generation)                                             [string]
      --path                        directory path to generate the agent file               [string]
      --description                 what the agent should do                                [string]
      --mode                        agent mode      [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools        comma-separated list of permissions to allow (default: all).
                                    Available: "bash, read, edit, glob, grep, webfetch, task,
                                    todowrite, websearch, lsp, skill"                       [string]
      --provision                   comma-separated list of tools to provision (profile tool
                                    allowlist)                                              [string]
  -m, --model                       model to use in the format of provider/model            [string]
      --json                        output JSON                                            [boolean]
  -o, --output                      write creation result to output file path               [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode agent list --help 1`] = `
"lmplayer agent list

list all available agents

Options:
  -h, --help             show help                                                         [boolean]
  -v, --version          show version number                                               [boolean]
      --print-logs       print logs to stderr                                              [boolean]
      --log-level        log level              [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure             run without external plugins                                      [boolean]
      --json             output JSON                                                       [boolean]
  -o, --output           write agents list to output file path                              [string]
  -q, --search, --query  filter agents by name, description, or model                       [string]
      --native           filter built-in vs custom agents                                  [boolean]
      --mode             filter by agent mode       [string] [choices: "all", "primary", "subagent"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session ls --help 1`] = `
"lmplayer session ls

list sessions

Options:
  -h, --help                show help                                                      [boolean]
  -v, --version             show version number                                            [boolean]
      --print-logs          print logs to stderr                                           [boolean]
      --log-level           log level           [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                   [boolean]
  -n, --limit, --max-count  limit number of sessions                                        [number]
      --roots               only show root sessions                                        [boolean]
  -a, --all                 show sessions across all projects (global)                     [boolean]
  -q, --search              filter sessions by title                                        [string]
  -o, --output              write sessions list to output file path                         [string]
      --json                output JSON                                                    [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session list --help 1`] = `
"lmplayer session list

list sessions

Options:
  -h, --help                show help                                                      [boolean]
  -v, --version             show version number                                            [boolean]
      --print-logs          print logs to stderr                                           [boolean]
      --log-level           log level           [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                run without external plugins                                   [boolean]
  -n, --max-count, --limit  limit to N most recent sessions                                 [number]
      --roots               only show root sessions                        [boolean] [default: true]
  -a, --all                 show sessions across all projects (global)                     [boolean]
  -q, --search              filter sessions by title                                        [string]
  -o, --output              write sessions list to output file path                         [string]
      --format              output format              [choices: "table", "json"] [default: "table"]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session delete --help 1`] = `
"lmplayer session delete <sessionID> [extraSessionIDs..]

delete one or more sessions

Positionals:
  sessionID        session ID to delete                                          [string] [required]
  extraSessionIDs  additional session IDs to delete                            [array] [default: []]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -f, --force       ignore non-existent sessions, never error                              [boolean]
  -o, --output      write delete result to output file path                                 [string]
      --json        output JSON                                                            [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session show --help 1`] = `
"lmplayer session show <sessionID>

show detailed session information

Positionals:
  sessionID  session ID to inspect                                               [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -o, --output      write session details to output file path                               [string]
      --json        output JSON                                                            [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session status --help 1`] = `
"lmplayer session status [sessionID]

show runtime status of sessions

Positionals:
  sessionID  session ID to inspect status for                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -o, --output      write status to output file path                                        [string]
      --json        output JSON                                                            [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session tail --help 1`] = `
"lmplayer session tail <sessionID>

print recent session messages

Positionals:
  sessionID  session ID to inspect                                               [string] [required]

Options:
  -h, --help            show help                                                          [boolean]
  -v, --version         show version number                                                [boolean]
      --print-logs      print logs to stderr                                               [boolean]
      --log-level       log level               [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure            run without external plugins                                       [boolean]
  -n, --lines, --limit  number of messages to print                           [number] [default: 20]
  -o, --output          write messages to output file path                                  [string]
      --json            output JSON                                                        [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode session crons --help 1`] = `
"lmplayer session crons <sessionID>

inspect scheduled cron jobs for a session

Positionals:
  sessionID  session ID to inspect                                               [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -c, --cron        specific cron ID to inspect                                             [string]
  -d, --delete      cron ID to delete/cancel                                                [string]
  -o, --output      write crons report to output file path                                  [string]
      --json        output JSON                                                            [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode models list --help 1`] = `
"lmplayer models list [provider]

list available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help                       show help                                               [boolean]
  -v, --version                    show version number                                     [boolean]
      --print-logs                 print logs to stderr                                    [boolean]
      --log-level                  log level    [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                       run without external plugins                            [boolean]
  -q, --search, --query            filter models by query matching ID, name, or provider    [string]
  -r, --reasoning                  filter models supporting reasoning effort / thinking    [boolean]
      --toolcall, --tools          filter models supporting tool calling                   [boolean]
      --attachment, --attachments  filter models supporting image and file attachments     [boolean]
      --min-context                filter models with context window at least this many tokens
                                                                                            [number]
  -o, --output                     write models list to output file path                    [string]
      --verbose                    use more verbose model output (includes metadata like costs)
                                                                                           [boolean]
      --json                       output models as a JSON array (id, limits, capabilities,
                                   reasoning-effort variants)                              [boolean]
      --refresh                    refresh the models cache from models.dev                [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github install --help 1`] = `
"lmplayer github install

install the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode github run --help 1`] = `
"lmplayer github run

run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --event       GitHub mock event to run the agent for                                  [string]
      --token       GitHub personal access token (github_pat_********)                      [string]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db path --help 1`] = `
"lmplayer db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -o, --output      write database path to output file path                                 [string]
      --json        output as JSON                                                         [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db info --help 1`] = `
"lmplayer db info

show database size, row counts, and storage metrics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -o, --output      write database info to output file path                                 [string]
      --json        output as JSON                                                         [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db check --help 1`] = `
"lmplayer db check

verify database integrity and foreign key constraints

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -o, --output      write check results to output file path                                 [string]
      --json        output as JSON                                                         [boolean]"
`;

exports[`opencode CLI help-text snapshots every documented command emits stable help text: opencode db vacuum --help 1`] = `
"lmplayer db vacuum

reclaim disk space, checkpoint WAL, and optimize

Options:
  -h, --help               show help                                                       [boolean]
  -v, --version            show version number                                             [boolean]
      --print-logs         print logs to stderr                                            [boolean]
      --log-level          log level            [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure               run without external plugins                                    [boolean]
      --wal, --checkpoint  only checkpoint and truncate the WAL without rewriting the database file
                                                                                           [boolean]
      --analyze            run ANALYZE for query planner statistics                        [boolean]
  -o, --output             write vacuum results to output file path                         [string]
      --json               output as JSON                                                  [boolean]"
`;
